sugar/tests/fail/par.mx
a : 1 |- connect via a
    { u -> u
    ; v -> v
    }
